основная информация из лендинга

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,10 +1,13 @@
 //base
 $base-indent: 20px;
-$base-mobile-indent: 10px;
+$base-indent-mobile: 10px;
+$base-border-radius: 15px;
+$base-border-radius-mobile: 10px;
 $bg-color: white;
 $overlayer-color: #999FA9;
 
 //colors
+$body-bg-color: rgba(243, 248, 254, 1);
 $system-color: #074064;
 $system-color-medium: #074064eb;
 $system-color-light: #1F80AC;
