--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,2 +1,22 @@
 @import 'variables';
 @import 'fonts';
+@import 'components';
+
+* {
+    box-sizing: content-box;
+}
+
+body {
+    background-color: $body-bg-color;
+    height: inherit;
+    line-height: 1.15;
+    display: flex;
+    flex-direction: column;
+    user-select: none;
+    position: relative;
+    min-height: 100vh;
+}
+
+main {
+    margin: 0 15%;
+}
